--- a/Pagina_Web_Desarrollo_Sustentable/blog.html
+++ b/Pagina_Web_Desarrollo_Sustentable/blog.html
@@ -13,8 +13,8 @@
     />
     <link rel="preload" href="./CSS/normalize.css" as="style" />
     <link rel="stylesheet" href="./CSS/normalize.css" />
-    <link rel="preload" href="./CSS/styles.css" as="style" />
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="preload" href="./CSS/blog.css" as="style" />
+    <link rel="stylesheet" href="./CSS/blog.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -43,20 +43,76 @@
         </li>
       </ul>
     </header>
-    <section>
-      <h1 class="titulo" id="text">
-        <span>Es hora de cuidar</span><br />El planeta.
-      </h1>
-      <img src="./img/bird1.png" alt="bir1" id="bird1" class="pajaro" />
-      <img src="./img/bird2.png" alt="bir2" id="bird2" class="pajaro" />
-      <img src="./img/forest.png" alt="forest" id="forest" />
-      <a href="#" class="btn_explora" id="btn">Explora</a>
-      <img src="./img/rocks.png" alt="rocks" id="rocks" />
-      <img src="./img/water.png" alt="water" id="water" />
-    </section>
-    <div class="sec">
-      <h2>Conociendo México</h2>
-    </div>
+
+    <!--Inicio del contenido html-->
+    <main>
+      <section class="blog">
+        <h1 class="title">Blog sobre el Desarrollo Sustentable</h1>
+        <div class="tres-columnas">
+          <div class="container">
+            <div class="card">
+              <img src="./img/nevadoToluca_edomx.jpg" alt="Nevado de toluca" />
+              <h4>Naturaleza</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate expedita iste laboriosam animi aliquid alias
+                aspernatur repellendus soluta maxime.
+              </p>
+              <a href="#">Leer más</a>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card">
+              <img src="./img/nevadoToluca_edomx.jpg" alt="Nevado de toluca" />
+              <h4>Naturaleza</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate expedita iste laboriosam animi aliquid alias
+                aspernatur repellendus soluta maxime.
+              </p>
+              <a href="#">Leer más</a>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card">
+              <img src="./img/nevadoToluca_edomx.jpg" alt="Nevado de toluca" />
+              <h4>Naturaleza</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate expedita iste laboriosam animi aliquid alias
+                aspernatur repellendus soluta maxime.
+              </p>
+              <a href="#">Leer más</a>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card">
+              <img src="./img/nevadoToluca_edomx.jpg" alt="Nevado de toluca" />
+              <h4>Naturaleza</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate expedita iste laboriosam animi aliquid alias
+                aspernatur repellendus soluta maxime.
+              </p>
+              <a href="#">Leer más</a>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card">
+              <img src="./img/nevadoToluca_edomx.jpg" alt="Nevado de toluca" />
+              <h4>Naturaleza</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate expedita iste laboriosam animi aliquid alias
+                aspernatur repellendus soluta maxime.
+              </p>
+              <a href="#">Leer más</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!--Seccion del footer-->
 
     <footer class="pie-pagina">
@@ -94,6 +150,8 @@
         >
       </div>
     </footer>
+    <!--Fin del footer-->
+    <!--Enlace a script principal-->
     <script src="./app.js"></script>
   </body>
 </html>
